feat: global stats for lan interface set
